updated env file

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=QR Code Scanner
+APP_NAME="QR Code Scanner"
 APP_ENV=local
 APP_KEY=base64:wJBCYw51tKnT9rYfjsZMw7sKojHlzFAHpZhecx1K2Qk=
 APP_DEBUG=true
