--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "phpoffice/phpspreadsheet": "^1.29",
         "simplesoftwareio/simple-qrcode": "~4"
     },
     "require-dev": {
